--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,17 @@ requires = ["setuptools>=42", "wheel", "pybind11>=2.9.1", "cmake>=3.16", "scikit
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
-#build = ["cp{37,38,39}-manylinux_x86_64", "cp{37,38,39}-manylinux_aarch64", "cp{37,38,39}-macosx_x86_64", "cp{38,39}-macosx_arm64"]
-build = ["cp38-manylinux_aarch64", "cp38-macosx_arm64"]
+build = ["cp{37,38,39}-manylinux_x86_64", "cp{37,38,39}-manylinux_aarch64", "cp{37,38,39}-macosx_x86_64", "cp{38,39}-macosx_arm64"]
 
-test-command = "cmake -G Ninja -DPython3_EXECUTABLE=$(which python) -B build-dir -S {project}/test/test_cmake && cmake --build build-dir/ && build-dir/a.out && python -m pytest -v -n auto --durations 20 {project}/test/"
+test-command = [
+    "cmake -G Ninja -DPython3_EXECUTABLE=$(which python) -B build-dir -S {project}/test/test_cmake",
+    "cmake --build build-dir/",
+    "build-dir/a.out",
+    "python -m pytest -v -n auto --durations 20 {project}/test/"
+]
 test-requires = ["pytest-xdist"]
 test-extras = ["test"]
-test-skip = "*-macosx_arm64"
+test-skip = "*-macosx_arm64 *-*linux_aarch64"
 
 manylinux-x86_64-image = "manylinux2014"
 
