--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,27 @@
 [build-system]
-requires = ["setuptools>=42", "wheel", "pybind11>=2.6.4", "cmake>=3.16", "scikit-build>=0.12"]
+requires = ["setuptools>=42", "wheel", "pybind11>=2.9.1", "cmake>=3.16", "scikit-build>=0.12"]
 
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
-build = ["cp{37,38,39,310}-manylinux_x86_64", "cp{37,38,39,310}-macosx_x86_64"]
+build = ["cp{37,38,39}-manylinux_x86_64", "cp{37,38,39}-manylinux_aarch64", "cp{37,38,39}-macosx_x86_64", "cp{38,39}-macosx_arm64"]
 
-test-command = "cmake -DPython3_EXECUTABLE=$(which python) -G Ninja -B build-dir -S {project}/test/test_cmake && cmake --build build-dir/ && build-dir/a.out && python -m pytest -v -n auto --durations 20 {project}/test/"
+test-command = [
+    "cmake -G Ninja -DPython3_EXECUTABLE=$(which python) -B build-dir -S {project}/test/test_cmake",
+    "cmake --build build-dir/",
+    "build-dir/a.out",
+    "python -m pytest -v -n auto --durations 20 {project}/test/"
+]
 test-requires = ["pytest-xdist"]
 test-extras = ["test"]
+test-skip = "*-macosx_arm64 *-*linux_aarch64"
 
 manylinux-x86_64-image = "manylinux2014"
 
 [tool.cibuildwheel.linux]
-before-build = "yum -y update && yum install -y openblas-devel ninja-build"
+archs = ["x86_64", "aarch64"] # Forces arm64 build on x86_64 runner using emulation.
+before-build = "yum -y update && yum install -y epel-release && yum install -y openblas-devel ninja-build"
 
 [tool.cibuildwheel.macos]
+archs = ["x86_64", "arm64"] # Forces arm64 build on x86_64 runner using cross-compilation.
 before-build = "export HOMEBREW_AUTO_UPDATING=0 && brew update && brew install ninja"
