--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -82,7 +82,9 @@ jobs:
           python3 -m pip -v install --global-option build --global-option --debug dolfinx/python/
 
       - name: Run mypy checks
-        run: python3 -m mypy dolfinx/python/dolfinx
+        run: |
+          cd dolfinx/python
+          python3 -m mypy dolfinx
 
       - name: Build DOLFINx C++ unit tests
         run: |
