--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build:
     name: Build and test (Red Hat)
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     container: rockylinux/rockylinux:9
 
     env:
