--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -20,11 +20,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-22.04]
         python-version: ["3.8", "3.9", "3.10"]
-    env:
-      CC: gcc-10
-      CXX: g++-10
 
     steps:
       - uses: actions/checkout@v3
@@ -36,7 +33,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get -y upgrade
-          sudo apt-get install -y doxygen libgraphviz-dev libopenblas-dev liblapack-dev ninja-build
+          sudo apt-get install -y doxygen graphviz libopenblas-dev liblapack-dev ninja-build
 
       - name: Install Basix
         run: python3 -m pip -v install .[ci]
@@ -144,11 +141,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-22.04]
         python-version: ["3.10"]
-    env:
-      CC: gcc-10
-      CXX: g++-10
 
     steps:
       - uses: actions/checkout@v3
@@ -179,7 +173,7 @@ jobs:
       - name: Run Python demos
         run: |
           python3 -m pytest demo/python/test.py
-      
+
       - name: Run C++ demos
         run: |
           python3 -m pytest demo/cpp/test.py
@@ -189,10 +183,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
-    env:
-      CC: gcc-10
-      CXX: g++-10
+        os: [ubuntu-22.04]
 
     steps:
       - uses: actions/checkout@v3
