--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -100,4 +100,4 @@ jobs:
       - name: Run DOLFINx Python demos
         run: |
           cd dolfinx
-          python3 -m pytest -n auto python/demo/test.py
+          python3 -m pytest python/demo/test.py
