--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -98,4 +98,4 @@ jobs:
       - name: Run DOLFINx Python demos
         run: |
           cd dolfinx/
-          python3 -m pytest python/demo/test.py
+          python3 -m pytest -n auto -m serial --durations=10 python/demo/test.py
