Include tensor element symmetry in its hash (#620)
* Test hash equality for sym and asym TensorElements

* Add `symmetric` to ufl_wrapper.TensorElement._repr

* flake8 fix

* Change test dir

* Run tests in serial

* Fix chdir

Co-authored-by: Garth N. Wells <gnw20@cam.ac.uk>

--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -93,7 +93,9 @@ jobs:
           ctest -V --output-on-failure -R unittests
 
       - name: Run DOLFINx Python unit tests
-        run: python3 -m pytest -n auto dolfinx/python/test/unit
+        run: |
+          cd dolfinx
+          python3 -m pytest -n auto python/test/unit
 
       - name: Run DOLFINx Python demos
         run: |
