--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -27,7 +27,7 @@ jobs:
 
     steps:
       - name: Install required packages to install Intel compilers and to build
-        run: apt -y update && apt install -y cmake git gnupg ninja-build
+        run: apt -y update && apt install -y cmake gnupg ninja-build wget
 
       - uses: actions/checkout@v3
 
@@ -36,8 +36,8 @@ jobs:
           wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           echo "deb https://apt.repos.intel.com/oneapi all main" | tee /etc/apt/sources.list.d/oneAPI.list
-          apt update
-          apt install -y intel-oneapi-common-vars intel-oneapi-compiler-dpcpp-cpp intel-oneapi-python  intel-oneapi-mkl
+          apt-get update
+          apt-get install -y intel-oneapi-common-vars intel-oneapi-compiler-dpcpp-cpp intel-oneapi-python  intel-oneapi-mkl
 
       - name: Install Basix
         run: |
