--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -36,8 +36,8 @@ jobs:
           wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           echo "deb https://apt.repos.intel.com/oneapi all main" | tee /etc/apt/sources.list.d/oneAPI.list
-          apt-get update
-          apt-get install -y intel-oneapi-common-vars intel-oneapi-compiler-dpcpp-cpp intel-oneapi-python  intel-oneapi-mkl
+          apt update
+          apt install -y intel-basekit
 
       - name: Install Basix
         run: |
