Update intel actions

--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -1,14 +1,11 @@
 name: oneAPI compilers
 
-# This workflow will test Basix built using Intel compilers and MKL
+# Test Basixusing Intel oneAPI compilers and MKL
 
 on:
   push:
-    branches:
-      - "**"
-  schedule:
-    # '*' is a special character in YAML, so string must be quoted
-    - cron: "0 2 * * TUE"
+    tags:
+      - "v*"
   pull_request:
     branches:
       - main
