--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -36,6 +36,10 @@ jobs:
           apt update
           apt install -y intel-basekit
 
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
       - name: Install Basix
         run: |
           . /opt/intel/oneapi/setvars.sh
