--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -24,7 +24,7 @@ jobs:
 
     steps:
       - name: Install required packages to install Intel compilers and to build
-        run: apt -y update && apt install -y cmake git gnupg ninja-build wget
+        run: apt -y update && apt install -y cmake git gnupg ninja-build python3-dev python3-pip python3-setuptools wget
 
       - uses: actions/checkout@v3
 
@@ -35,10 +35,6 @@ jobs:
           echo "deb https://apt.repos.intel.com/oneapi all main" | tee /etc/apt/sources.list.d/oneAPI.list
           apt update
           apt install -y intel-basekit
-
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
 
       - name: Install Basix
         run: |
