--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -4,8 +4,8 @@ name: oneAPI compilers
 
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - "main"
   pull_request:
     branches:
       - main
