--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -30,13 +30,10 @@ jobs:
 
       - name: Install Intel compilers
         run: |
-          # wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
-          # apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
-          # echo "deb https://apt.repos.intel.com/oneapi all main" | tee /etc/apt/sources.list.d/oneAPI.list
           wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB | gpg --dearmor | tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
           echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" | tee /etc/apt/sources.list.d/oneAPI.list
           apt update
-          apt install -y intel-oneapi-compiler-dpcpp-cpp intel-oneapi-mkl intel-oneapi-python
+          apt install -y intel-basekit intel-oneapi-python
 
       - name: Install Basix
         run: |
