--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -34,6 +34,9 @@ jobs:
           sudo apt-get update
           sudo apt-get -y upgrade
           sudo apt-get install -y doxygen graphviz libopenblas-dev liblapack-dev ninja-build
+    
+      - name: Install UFL
+        run: python3 -m pip -v install git+https://github.com/FEniCS/ufl.git@release 
 
       - name: Install Basix
         run: python3 -m pip -v install .[ci]
