Disable upgrade in ubuntu

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get -y upgrade
+          # sudo apt-get -y upgrade
           sudo apt-get install -y doxygen graphviz libopenblas-dev liblapack-dev ninja-build
 
       - name: Install Basix
