--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -38,13 +38,19 @@ list(APPEND CMAKE_PREFIX_PATH "${_tmp_dir}")
 
 find_package(Python COMPONENTS Interpreter Development REQUIRED)
 
-message("Hints: $ENV{PYBIND11_ROOT}")
-find_package(nanobind REQUIRED)
+
+# Detect the installed nanobind package and import it into CMake
+execute_process(
+  COMMAND "${Python_EXECUTABLE}" -c "import nanobind; print(nanobind.cmake_dir())"
+  OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE NB_DIR)
+list(APPEND CMAKE_PREFIX_PATH "${NB_DIR}")
+find_package(nanobind CONFIG REQUIRED)
+
 
 # Create the binding library
 # pybind11_add_module(_basixcpp MODULE wrapper.cpp)
 nanobind_add_module(_basixcpp MODULE wrapper.cpp)
-target_link_libraries(_basixcpp PRIVATE Basix::basix nanobind)
+target_link_libraries(_basixcpp PRIVATE Basix::basix)
 
 # Add strict compiler flags
 include(CheckCXXCompilerFlag)
