--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
 # We require that the user installs cmake
-requires = ["setuptools>=42", "wheel", "pybind11>=2.9.1"]
+requires = ["setuptools>=42", "wheel", "nanobind>=0.3.1", "cmake"]
 
 build-backend = "setuptools.build_meta"
