--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -70,70 +70,70 @@ jobs:
         run: |
           python3 -m pytest demo/cpp/test.py
 
-      # - name: Build documentation
-      #   run: |
-      #     export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
-      #     cd doc/cpp
-      #     doxygen
-      #     cd ../python
-      #     make html
+      - name: Build documentation
+        run: |
+          export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
+          cd doc/cpp
+          doxygen
+          cd ../python
+          make html
 
-      # - name: Upload C++ documentation artifact
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: doc-cpp
-      #     path: |
-      #       doc/cpp/html
-      #     retention-days: 2
-      #     if-no-files-found: error
-      # - name: Upload Python documentation artifact
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: doc-python
-      #     path: |
-      #       doc/python/build/html
-      #     retention-days: 2
-      #     if-no-files-found: error
+      - name: Upload C++ documentation artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: doc-cpp
+          path: |
+            doc/cpp/html
+          retention-days: 2
+          if-no-files-found: error
+      - name: Upload Python documentation artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: doc-python
+          path: |
+            doc/python/build/html
+          retention-days: 2
+          if-no-files-found: error
 
-      # - name: Build website documentation
-      #   run: |
-      #     export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
-      #     cd doc/web
-      #     python make_html.py
+      - name: Build website documentation
+        run: |
+          export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
+          cd doc/web
+          python make_html.py
 
-      # - name: Set version name
-      #   if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && matrix.python-version == '3.10' }}
-      #   run: |
-      #     echo "VERSION_NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      # - name: Build documentation to upload
-      #   if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && matrix.python-version == '3.10' }}
-      #   run: |
-      #     export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
-      #     cd doc/web
-      #     python make_html.py --url https://docs.fenicsproject.org/basix/${{ env.VERSION_NAME }}
-      # - name: Checkout FEniCS/docs
-      #   if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && matrix.python-version == '3.10' }}
-      #   uses: actions/checkout@v3
-      #   with:
-      #     repository: "FEniCS/docs"
-      #     path: "docs"
-      #     ssh-key: "${{ secrets.SSH_GITHUB_DOCS_PRIVATE_KEY }}"
-      # - name: Copy documentation into repository
-      #   if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && matrix.python-version == '3.10' }}
-      #   run: |
-      #     cd docs
-      #     git rm -r --ignore-unmatch basix/${{ env.VERSION_NAME }}
-      #     mkdir -p basix/${{ env.VERSION_NAME }}
-      #     cp -r ../doc/web/html/* basix/${{ env.VERSION_NAME }}
-      # - name: Commit and push documentation to FEniCS/docs
-      #   if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && matrix.python-version == '3.10' }}
-      #   run: |
-      #     cd docs
-      #     git config --global user.email "fenics@github.com"
-      #     git config --global user.name "FEniCS GitHub Actions"
-      #     git add --all
-      #     git commit --allow-empty -m "Update Basix docs FEniCS/basix@${{ github.sha }}"
-      #     git push
+      - name: Set version name
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && matrix.python-version == '3.10' }}
+        run: |
+          echo "VERSION_NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Build documentation to upload
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && matrix.python-version == '3.10' }}
+        run: |
+          export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
+          cd doc/web
+          python make_html.py --url https://docs.fenicsproject.org/basix/${{ env.VERSION_NAME }}
+      - name: Checkout FEniCS/docs
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && matrix.python-version == '3.10' }}
+        uses: actions/checkout@v3
+        with:
+          repository: "FEniCS/docs"
+          path: "docs"
+          ssh-key: "${{ secrets.SSH_GITHUB_DOCS_PRIVATE_KEY }}"
+      - name: Copy documentation into repository
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && matrix.python-version == '3.10' }}
+        run: |
+          cd docs
+          git rm -r --ignore-unmatch basix/${{ env.VERSION_NAME }}
+          mkdir -p basix/${{ env.VERSION_NAME }}
+          cp -r ../doc/web/html/* basix/${{ env.VERSION_NAME }}
+      - name: Commit and push documentation to FEniCS/docs
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && matrix.python-version == '3.10' }}
+        run: |
+          cd docs
+          git config --global user.email "fenics@github.com"
+          git config --global user.name "FEniCS GitHub Actions"
+          git add --all
+          git commit --allow-empty -m "Update Basix docs FEniCS/basix@${{ github.sha }}"
+          git push
 
   build-cmake:
     name: Build using C++ and Python parts separately and run tests
