--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -39,20 +39,24 @@ jobs:
 
       - name: Lint with flake8
         run: |
+          pip3 install flake8
           flake8 --statistics test/
           flake8 --statistics python/
           flake8 --statistics demo/python
 
       - name: Run mypy checks
         run: |
+          pip3 install mypy
           python3 -m mypy python/basix
 
       - name: pydocstyle checks
         run: |
+          pip3 install pydocstyle
           python3 -m pydocstyle python/basix
 
       - name: Run units tests
         run: |
+          pip3 install pytest
           python3 -m pytest -n auto --durations 20 test/
 
       - name: Run simple CMake integration test
