--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Run units tests
         run: |
-          pip3 install pytest pytest-xdist
+          pip3 install pytest pytest-xdist sympy
           python3 -m pytest -n auto --durations 20 test/
 
       - name: Run simple CMake integration test
