--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.7.0.dev0"
 
 [build-system]
 # We require that the user installs cmake
-requires = ["scikit-build-core", "wheel", "pybind11>=2.9.1"]
+requires = ["scikit-build-core", "wheel", "pybind11>=2.9.1", "numpy>=1.21"]
 build-backend = "scikit_build_core.build"
 
 [tool.scikit-build]
