In right place...

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [project]
 name = "basix"
 version = "0.7.0.dev0"
+dependencies = ["numpy>=1.21"]
 
 [build-system]
-requires = ["pybind11>=2.9.1", "cmake>=3.16", "scikit-build-core", "numpy>=1.21"]
+requires = ["pybind11>=2.9.1", "cmake>=3.16", "scikit-build-core"]
 build-backend = "scikit_build_core.build"
 
 [tool.scikit-build]
