--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
 name = "basix"
 version = "0.7.0.dev0"
+dependencies = ["numpy>=1.21"]
 
 [build-system]
 # We require that the user installs cmake
-requires = ["scikit-build-core", "wheel", "pybind11>=2.9.1", "numpy>=1.21"]
+requires = ["scikit-build-core", "wheel", "pybind11>=2.9.1"]
 build-backend = "scikit_build_core.build"
 
 [tool.scikit-build]
