--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,14 @@ name = "basix"
 version = "0.7.0.dev0"
 dependencies = ["numpy>=1.21"]
 
+[project.optional-dependencies]
+ci = ["pytest-xdist", "pytest", "numba",
+      "fenics-ufl@git+https://github.com/fenics/ufl", "sympy"]
+
+[tool.pytest.ini_options]
+testpaths = ["test"]
+# addopts = "-n auto --durations 20"
+
 [build-system]
 requires = ["pybind11>=2.9.1", "cmake>=3.16", "scikit-build-core"]
 build-backend = "scikit_build_core.build"
