--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.7.0.dev0"
 dependencies = ["numpy>=1.21"]
 
 [project.optional-dependencies]
-ci = ["pytest-xdist", "pytest", "numba",
+ci = ["pytest-xdist", "pytest", "numba", "scipy>=0.16", "flake8", "pydocstyle", "mypy",
       "fenics-ufl@git+https://github.com/fenics/ufl", "sympy"]
 
 [tool.pytest.ini_options]
