Sort out package name

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -8,8 +8,8 @@ if(SKBUILD)
   # Always use lib/ in the Python root. Otherwise, environment used for
   # wheels might place in lib64/, which CMake on some systems will not
   # find.
-  set(CMAKE_INSTALL_LIBDIR ${SKBUILD_PROJECT_NAME}/lib)
-  set(CMAKE_INSTALL_INCLUDEDIR ${SKBUILD_PROJECT_NAME}/include)
+  set(CMAKE_INSTALL_LIBDIR basix/lib)
+  set(CMAKE_INSTALL_INCLUDEDIR basix/include)
 endif()
 
 include(FeatureSummary)
