--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ dependencies = ["numpy>=1.21"]
 
 [project.optional-dependencies]
 ci = ["pytest-xdist", "pytest", "numba", "scipy>=0.16", "flake8", "pydocstyle", "mypy",
-      "fenics-ufl@git+https://github.com/fenics/ufl", "sympy", "matplotlib"]
+      "fenics-ufl@git+https://github.com/fenics/ufl", "sympy", "matplotlib", "sphinx"]
 
 [tool.pytest.ini_options]
 testpaths = ["test"]
