Revert python folder

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -63,5 +63,5 @@ if (SKBUILD)
     set_target_properties(_basixcpp PROPERTIES INSTALL_RPATH "$ORIGIN/lib")
   endif()
 
-  install(TARGETS _basixcpp DESTINATION basix)
+  install(TARGETS _basixcpp DESTINATION .)
 endif()
