--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ version = "0.7.0.dev0"
 dependencies = ["numpy>=1.21"]
 
 [project.optional-dependencies]
-ci = ["pytest-xdist", "pytest", "numba", "scipy>=0.16", "flake8", "pydocstyle", "mypy",
-      "fenics-ufl@git+https://github.com/fenics/ufl", "sympy", "matplotlib", "sphinx",
-      "markdown", "pyyaml", "pylit"]
+docs = ["markdown", "pylit3", "pyyaml", "sphinx==5.0.2", "sphinx_rtd_theme"]
+lint = ["flake8", "pydocstyle"]
+optional = ["numba", "fenics-ufl@git+https://github.com/fenics/ufl"]
+test = ["pytest", "sympy", "scipy", "matplotlib", "fenics-basix[optional]"]
+ci = ["mypy", "pytest-xdist", "fenics-basix[docs]", "fenics-basix[lint]",
+      "fenics-basix[optional]", "fenics-basix[test]"]
 
 [tool.pytest.ini_options]
 testpaths = ["test"]
