--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -43,10 +43,9 @@ jobs:
           flake8 --statistics python/
           flake8 --statistics demo/python
 
-#      - name: Run mypy checks
-#        run: |
-#          pip3 install mypy
-#          python3 -m mypy python/basix
+      - name: Run mypy checks
+        run: |
+          python3 -m mypy python/basix
 
       - name: pydocstyle checks
         run: |
