--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -68,6 +68,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.basix_ref }}
+      
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip setuptools
 
       - name: Install skbuild
         run: python -m pip install build
